добавлен блок пользователя в запрос /login
